--- a/app/src/App.css
+++ b/app/src/App.css
@@ -15,7 +15,7 @@ body {
 
 /* NavBar.css */
 header {
-  background-color: #333;
+  background-color: #20262f;
   color: white;
   padding: 10px 0;
 }
@@ -56,7 +56,7 @@ footer {
   width: 100%;
   text-align: center;
   height: 40px;
-  background-color: rgb(20, 25, 32);
+  background-color: #20262f;
   color: white;
   min-width: 750px;
 }
