--- a/app/src/App.css
+++ b/app/src/App.css
@@ -60,3 +60,16 @@ footer {
   color: white;
   min-width: 750px;
 }
+
+/* Home.css */
+.headShot-container  {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.headShot-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
