--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,26 +1,30 @@
 :root {
   --background-color: #ffffff;
   --primary-color: #17191F;
+  
 }
 
 /* App.css */
 html {
   position: relative;
   min-height: 100%;
+  color: var(--primary-color);
+  background-color: var(--background-color);
+  font-weight: 400;
 }
 
 body {
   margin: 0;
   height: 100vh;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   display: flex;
   flex-direction: column;
-  background-color: rgb(227,229,229);
+  background-color: var(--background-color);
 }
 
 /* NavBar.css */
 header {
-  background-color: #20262f;
+  background-color: var(--background-color);
   color: white;
   padding: 10px 0;
 }
@@ -41,7 +45,7 @@ nav ul li:last-child {
 }
 
 nav ul li a {
-  color: white;
+  color: var(--primary-color);
   text-decoration: none;
   font-size: 18px;
   padding: 10px 20px;
@@ -61,8 +65,6 @@ footer {
   width: 100%;
   text-align: center;
   height: 40px;
-  background-color: #20262f;
-  color: white;
   min-width: 750px;
 }
 
