add a css class so that the element of the navigation bar can be cleaner

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -74,6 +74,10 @@ nav ul li a:hover {
   color: var(--primary-color-lighter);
 }
 
+.navigation-element {
+  font-size: medium;
+}
+
 /* Footer.css */
 
 footer {
