--- a/app/src/App.css
+++ b/app/src/App.css
@@ -104,6 +104,12 @@ footer {
   object-fit: cover;
 }
 
+.presentation-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .presentation-container {
   width: 750px;
   height: 400px;
