--- a/app/src/App.css
+++ b/app/src/App.css
@@ -15,6 +15,10 @@ html {
   font-weight: 400;
 }
 
+main {
+  margin-bottom: 80px;
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -81,6 +85,7 @@ nav ul li a:hover {
 /* Footer.css */
 
 footer {
+  background-color: var(--background-color);
   padding-top: 10px;
   position: fixed;
   bottom: 0;
