--- a/app/src/App.css
+++ b/app/src/App.css
@@ -193,3 +193,9 @@ footer {
   object-fit: cover;
   object-position: center top;
 }
+
+/* Experiences.css */
+
+.company-name {
+  margin-bottom: 0px;
+}
