--- a/app/src/App.css
+++ b/app/src/App.css
@@ -105,7 +105,7 @@ footer {
   font-style: italic;
 }
 
-.headShot-description:last-child {
+.headShot-second-description {
   padding-top: 0px;
   font-size: small;
 }
@@ -198,4 +198,29 @@ footer {
 
 .company-name {
   margin-bottom: 0px;
+}
+
+.company-logo {
+  width: 100px;
+  height: 100px;
+}
+
+.logo-container  {
+  width: 200px;
+}
+
+.logo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.job-description li{
+  padding-bottom: 30px;
+}
+
+.job-presentation {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
