--- a/app/src/App.css
+++ b/app/src/App.css
@@ -224,3 +224,11 @@ footer {
   align-items: center;
   justify-content: space-around;
 }
+
+.duration-description{
+  padding-top: 10px;
+  display: flex;
+  font-style: italic;
+  justify-content: center;
+  align-items: center;
+}
