add an iframe to show linkedin post

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -232,3 +232,10 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+.job-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
