--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,9 +1,8 @@
 :root {
-  --background-color: #ffffff;
-  --primary-color: #17191F;
-  --primary-color-lighter: #808080;
-  --accent-color: #044FE7;
-  --secondary-color: #7362e0;
+  --background-color: #f2f2f2;
+  --primary-color: #00060d;
+  --secondary-color: #1b2b40;
+  --call-to-action-color: #bf5934;
 }
 
 /* App.css */
